[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "contact@kidger.site", name = "Patrick Kidger"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3"
]
dependencies = ["matplotlib>=3.7.1"]
description = "Typst extension, adding support for generating figures using inline Python code"
keywords = ["typst", "matplotlib", "plotting"]
license = {file = "LICENSE"}
name = "typst_pyimage"
readme = "README.md"
requires-python = "~=3.8"
urls = {repository = "https://github.com/patrick-kidger/typst_pyimage"}
version = "0.1.0"

[tool.hatch.build]
include = ["typst_pyimage/*"]

[tool.ruff]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false
